--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "lint": "eslint **/*.js",
+    "test": "jest --verbose --coverage",
+    "test-watch": "jest --watchAll --verbose --coverage"
   },
   "repository": {
     "type": "git",
@@ -21,6 +24,7 @@
     "dotenv": "^16.0.2",
     "eslint": "^8.23.1",
     "express": "^4.18.1",
-    "jest": "^29.0.3"
+    "jest": "^29.0.3",
+    "supertest": "^6.2.4"
   }
 }
